# Sentra

./: .gitignore  play.ipynb  setup.py
ml_agent/: requirements.txt  setup.py
ml_agent/agent_engine/: README.md  pyproject.toml
ml_agent/agent_engine/src/agent_workflow/: register.py
ml_agent/agent_engine/src/agent_workflow/configs/: config.yml
ml_agent/agent_engine/src/agent_workflow/tools/prompt_configuration/: pipeline_options.py  prompt_composer.py  stage_options.py  strategy_options.py
ml_agent/agent_engine/src/llm_providers/anthropic/: llm.py  register.py
ml_agent/prompt_engine/: README.md
ml_agent/prompt_engine/core/: orchestrator.py  pipeline.py  stage.py  strategy.py
ml_agent/prompt_engine/registry/: orchestrator.py
ml_agent/prompt_engine/registry/pipelines/: eda.py
ml_agent/prompt_engine/registry/stages/eda/: cardinality_analysis.py  data_ingestion.py  missing_values.py  outliers_detection.py  target_analysis.py  type_handling.py
ml_agent/prompt_engine/registry/strategies/eda/: data_ingestion.py  (+5 more)
ml_agent/prompt_engine/src/core/: orchestrator.py  pipeline.py  registry.py  stage.py
ml_agent/prompt_engine/src/registry/: orchestrator.py
prompt_engine/: README.md  composer.py  usage_example.ipynb
prompt_engine/components/: eda.py
prompt_engine/registry/: base.py
prompt_engine/registry/eda/: bivariative_analysis.py  cardinality.py  data_ingestion.py  data_quality.py  missing_values.py  outlier_detection.py  outliers_detection.py  target_analysis.py  type_handling.py  univariative_analysis.py
prompt_engine/template/: base.py  eda.py
(+13 files in other folders)
